--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,9 @@
 # The URL the site will be built for
 base_url = "https://example.com"
 
+# Theme name
+theme = "no-style-please"
+
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
