--- a/config.toml
+++ b/config.toml
@@ -44,3 +44,12 @@ generate_feeds = true
 
 # Set default language for multilingual site
 default_language = "en"
+
+# Header navigation links
+header_nav = [
+    { name = "~home", url = "/", def_lang=true },
+    { name = "#tags", url = "/tags" },
+    { name = "+categories", url = "/categories" },
+    { name = "!feed", url = "/atom.xml" },
+    { name = "[langs]" },
+]
