Set (default) `author` variable

--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,9 @@ theme = "no-style-please"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+# The default author for pages
+author = "Juan Manuel Lopez"
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
