--- a/config.toml
+++ b/config.toml
@@ -25,6 +25,9 @@ build_search_index = false
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = false
 
+# Translate emoji aliases to corresponding Unicode emoji equivalent
+render_emoji = true
+
 # Extra languages definition
 
 ## English
