--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,10 @@
 # The URL the site will be built for
 base_url = "https://example.com"
 
+# Site title and description, used in feeds by default.
+title = "Random Ramblings"
+description = "A personal blog featuring random content, primarily focused on IT (Information Technology)."
+
 # Theme name
 theme = "no-style-please"
 
