--- a/config.toml
+++ b/config.toml
@@ -25,5 +25,17 @@ build_search_index = false
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = false
 
+# Extra languages definition
+
+## English
+[languages.en]
+title = "Random Ramblings"
+description = "A personal blog featuring random content, primarily focused on IT (Information Technology)."
+
+## Spanish
+[languages.es]
+title = "Divagues Diversos"
+description = "Un blog personal con contenido aleatorio, principalmente enfocado en IT (Tecnologías de la Información)."
+
 [extra]
 # Put all your custom variables here
