--- a/config.toml
+++ b/config.toml
@@ -31,11 +31,13 @@ highlight_code = false
 [languages.en]
 title = "Random Ramblings"
 description = "A personal blog featuring random content, primarily focused on IT (Information Technology)."
+generate_feeds = true
 
 ## Spanish
 [languages.es]
 title = "Divagues Diversos"
 description = "Un blog personal con contenido aleatorio, principalmente enfocado en IT (Tecnologías de la Información)."
+generate_feeds = true
 
 [extra]
 # Put all your custom variables here
