--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ default_language = "en"
 
 # Header navigation links
 header_nav = [
-    { name = "~home", url = "/", def_lang=true },
+    { name = "~home", url = "/" },
     { name = "@blog", url = "/blog" },
     { name = "#tags", url = "/tags" },
     { name = "+categories", url = "/categories" },
