--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ header_nav = [
     { name = "@blog", url = "/blog" },
     { name = "#tags", url = "/tags" },
     { name = "+categories", url = "/categories" },
-    { name = "!feed", url = "/atom.xml" },
+    { name = "!feed", url = "/atom.xml", new_tab=true },
     { name = "[langs]" },
 ]
 
