Add new `series` taxonomy

--- a/config.toml
+++ b/config.toml
@@ -37,6 +37,7 @@ description = "A personal blog featuring random content, primarily focused on IT
 generate_feeds = true
 taxonomies = [
     { name = "tags" },
+    { name = "series" },
 ]
 
 ## Spanish
@@ -46,6 +47,7 @@ description = "Un blog personal con contenido aleatorio, principalmente enfocado
 generate_feeds = true
 taxonomies = [
     { name = "tags" },
+    { name = "series" },
 ]
 
 [extra]
