--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/no-style-please"]
 	path = themes/no-style-please
-	url = https://gitlab.com/atgumx/no-style-please.git
+	url = https://github.com/tandiljuan/no-style-please.git
